<resources>
    <string name="app_name">mGas</string>
    <string name="otp_dialog_explanation">An OTP code has been sent to the phone number provided. Please enter it below:</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_terms_amp_conditions"><![CDATA[View terms & conditions]]></string>
    <string name="accept_terms_amp_conditions"><![CDATA[Accept terms & conditions]]></string>
    <string name="error">Error</string>
    <string name="dismiss_button">Dismiss button</string>
    <string name="confirm_your_main_location">Confirm your main location:</string>
    <string name="select_location">Select location</string>
    <string name="map_search_icon">Map search icon</string>
    <string name="country">Country</string>
    <string name="governorate">Governorate</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="way">Way</string>
    <string name="confirm">Confirm</string>
    <string name="search">Search</string>
    <string name="current_location">Current location</string>
    <string name="search_for">Search for:</string>
    <string name="building">Building</string>
    <string name="please_wait_a_bit">Please wait a bit…</string>
    <string name="location_s_name">Location\'s name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_tap_here_to_register">New? Tap here to register!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_activity_order_location_map">Map</string>
    <string name="reset_password">Reset password</string>
    <string name="new_password">New password</string>
    <string name="title_activity_consumer_main">ConsumerMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_lotteries">Lotteries</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_industrial_gas_refill">Industrial Gas Refill</string>
    <string name="menu_composite_cylinder">Composite Cylinder</string>
    <string name="services">Services</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="gas_accessories_items">Gas Accessories (Items)</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="order_gas">Order Gas</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="service_type">Service type</string>
    <string name="cylinder_type">Cylinder type</string>
    <string name="delivery_options">Delivery options</string>
    <string name="confirm_order">Confirm order</string>
    <string name="total_cost">Total in cart: </string>
    <string name="item_cost">Current item: </string>
    <string name="view_cart_and_checkout">View Cart and checkout</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="civil_id_number">Civil ID number</string>
    <string name="next">Next</string>
    <string name="quantity">Quantity</string>
    <string name="climb_stairs">Climb stairs?</string>
    <string name="_1">1</string>
    <string name="OMR">OMR</string>
    <string name="your_cart">Your cart:</string>
    <string name="add_more">Add more</string>
    <string name="checkout">Checkout</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="select_a_payment_method">Select a payment method:</string>
    <string name="cash_payment">Cash payment</string>
    <string name="credit_card_payment">Credit card payment</string>
    <string name="no_currently_active_lotteries">No currently active lotteries</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="no_network_connection_available">No network connection available</string>
    <string name="participate_in_lottery">Participate in lottery</string>
    <string name="enter_promotion_code_below">Enter promotion code below:</string>
    <string name="participate">Participate</string>
    <string name="new_consumer">New consumer</string>
    <string name="new_driver">New driver</string>
    <string name="driver_registration">Driver Registration</string>
    <string name="driver_registration_instructions">To register as a driver, please go to Muscat Gases Company S.A.O.G head office in order to complete the registration process.\n\nPlease bring with you the following documents:</string>
    <string name="driver_registration_list">- Gas Transportation Certificates.\n- Civil Certificates\n- Copy of Commercial Registration Certificate\n- Copy of Chamber of Commerce\n- Copy of Sponsor Passport / Identity Card\n- Copies of Document showing authorized signatory\n- Guarantee Cheque, undated (amount to be decided at the time of credit approvals)\n- Application Credit Form\n- Civil defiance Certificate or Approval\n- Approval from authority to sell LPG</string>
    <string name="proceed_as_a_guest">Proceed as a guest</string>
    <string name="guest">Guest</string>
    <string name="you_are_a_guest">You are a guest</string>
    <string name="guest_not_allowed_action">You need to login or register to complete this action</string>
    <string name="display_route_error">Error: Could not display a route between requested locations</string>
    <string name="add_a_location">Add a location</string>
    <string name="add_location_error">Error: Unable to add a new location</string>
    <string name="location_added">Location added</string>
    <string name="explore">Explore</string>

    <string name="reported_issues">Reported Issues</string>
    <string name="request_queue">Request Queue</string>
    <string name="incoming_requests">Incoming Requests</string>
    <string name="request_history">Request History</string>
    <string name="orders">Orders</string>
    <string name="title_activity_driver_main">DriverMainActivity</string>
    <string name="payment_method">Payment method:</string>
    <string name="deliver_to">Deliver to:</string>
    <string name="place_order">Place order</string>
    <string name="another_location">Another location</string>
    <string name="order_placed">Order has been placed</string>
    <string name="multiple">x</string>
    <string name="stairs">Stairs:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unable_to_connect_to_server_error">Error: Unable to connect to server</string>
    <string name="submit_choice">Submit choice</string>
    <string name="choice_submitted">Your choice has been submitted</string>
    <string name="unable_to_submit_choice_error">Error: Could not submit choice</string>
    <string name="delivery_location">Delivery Location:</string>
    <string name="services_ordered">Services Ordered:</string>
    <string name="feedback">Feedback:</string>
    <string name="title_activity_consumer_drawer_base">ConsumerDrawerBaseActivity</string>
    <string name="unable_to_get_order_feedback_error">Error: Unable to get feedback for this order</string>
    <string name="language">Language:</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="status">Status:</string>
    <string name="home">Home</string>
    <string name="main_location">Main location:</string>
    <string name="main_location_s_name">Main location\'s name:</string>
    <string name="full_request_queue">Your request queue is full</string>
    <string name="queue">Queue</string>
</resources>
