<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_edged_background"
            android:backgroundTint="@color/textColorPrimary"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:padding="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/first_name"
                android:text="Test"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_edged_background"
            android:backgroundTint="@color/textColorPrimary"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:padding="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/last_name"
                android:text="User"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_edged_background"
            android:backgroundTint="@color/textColorPrimary"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:padding="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:text="95746197"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_edged_background"
            android:backgroundTint="@color/textColorPrimary"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:padding="10dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="driver pass"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_edged_background"
            android:backgroundTint="@color/textColorPrimary"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:padding="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="test@user.email"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutIdNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/round_edged_background"
            android:backgroundTint="@color/textColorPrimary"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:padding="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextIdNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/civil_id_number"
                android:inputType="number"
                android:text="12345678"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBoxAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_terms_amp_conditions"
            android:buttonTint="@color/colorAccent"
            android:textColor="@color/textColorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/view_terms_amp_conditions"
            android:textColor="@color/textColorPrimary"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonSendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/states_button_accent"
            android:enabled="false"
            android:padding="15dp"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>