<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="contentDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/colorPrimary"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewLogo"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layoutDirection="locale"
        android:textDirection="locale"
        android:background="@drawable/round_edged_background"
        android:backgroundTint="@color/textColorPrimary"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:padding="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textDirection="locale"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:text="95746197"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutMobile"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layoutDirection="locale"
        android:textDirection="locale"
        android:background="@drawable/round_edged_background"
        android:backgroundTint="@color/textColorPrimary"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:padding="10dp"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@android:color/transparent"
            android:textDirection="locale"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="driver pass"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        android:layout_below="@id/textInputLayoutPassword"
        android:onClick="forgotPasswordAction"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/textViewRegister"
        android:layout_marginBottom="10dp"
        android:enabled="false"
        android:padding="15dp"
        android:background="@drawable/states_button_accent"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:text="@string/login"
        android:onClick="loginAction" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/textViewGuestLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/textColorPrimary"
        android:text="@string/new_tap_here_to_register"
        android:onClick="goRegisterAction" />

    <TextView
        android:id="@+id/textViewGuestLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/textColorPrimary"
        android:text="@string/proceed_as_a_guest"
        android:onClick="guestLoginAction" />
</RelativeLayout>