<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:padding="25dp"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.DriverRegistrationActivity">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="36sp"
            android:textColor="@color/textColorPrimary"
            android:textAlignment="center"
            android:text="@string/driver_registration" />

        <TextView
            android:id="@+id/textViewInstructions"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textDirection="locale"
            android:layout_gravity="center"
            android:text="@string/driver_registration_instructions"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="40sp"
            android:textDirection="locale"
            android:lineSpacingExtra="10dp"
            android:text="@string/driver_registration_list"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="40dp"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>
</ScrollView>