<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/logo_cut_bg_sm">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="28sp"
        android:textColor="@color/textColorPrimary"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/participate_in_lottery" />

    <TextView
        android:id="@+id/textViewInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:text="@string/enter_promotion_code_below" />

    <om.webware.mgas.customViews.PinEntryEditText
        android:id="@+id/editTextCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewInstructions"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@id/textViewTitle"
        android:layout_alignEnd="@id/textViewTitle"
        android:layout_marginBottom="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:maxLength="8"
        android:background="@drawable/round_edged_background"
        android:backgroundTint="@color/textColorPrimary"
        android:textIsSelectable="false"
        android:cursorVisible="false"
        android:textSize="40sp"
        android:textColor="@color/colorAccent"
        app:spaceSize="10"/>

    <Button
        android:id="@+id/buttonParticipate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCode"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:background="@drawable/states_button_text_primary"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/participate" />
</RelativeLayout>